@@ -11,34 +11,35 @@ clean.test colneq.test colneq2.test colon.test colon2.test colon3.test \
 colon4.test colon5.test colon6.test colon7.test comment.test \
 comment2.test compile_f_c_cxx.test cond.test cond2.test cond3.test \
 cond4.test cond5.test cond6.test cond7.test condman.test condman2.test \
-conf2.test confdist.test confh.test config.test confincl.test \
-confsub.test confvar.test confvar2.test cxxcpp.test cxxlibobj.test \
-cxxlink.test cxxnoc.test cxxo.test cygwin32.test defun.test \
-defun2.test dejagnu.test depacl.test depacl2.test depend.test \
-depend2.test depend3.test discover.test distdir.test dup.test \
-dup2.test else.test empty.test error.test exdir.test exdir2.test \
-exsource.test extra.test extra3.test extra4.test flibs.test fnoc.test \
-fo.test fonly.test fpinst2.test fpinstall.test gnits.test \
-implicit.test include.test info.test insh.test insh2.test install.test \
-installsh.test instdata.test instexec.test insthook.test instman.test \
-interp.test interp2.test java.test javaprim.test javasubst.test	\
-ldadd.test lex.test lex2.test libobj.test libobj2.test libobj3.test \
-libobj4.test libobj5.test libobj6.test libobj7.test libobj8.test \
-library.test link_c_cxx.test link_f_c.test link_f_c_cxx.test \
-link_f_cxx.test link_f_only.test lisp.test mdate.test mdate2.test \
-mdate3.test mkinst2.test mkinstall.test noinst.test number.test	\
-objc.test obsolete.test order.test outdir.test output.test \
-output2.test output3.test output4.test output5.test package.test \
-parse.test pluseq.test pluseq2.test pluseq3.test pluseq4.test \
-pluseq5.test prefix.test primary.test primary2.test proginst.test \
-ranlib.test recurs.test recurs2.test remake.test remake2.test req.test \
-rulepat.test scripts.test seenc.test sinclude.test spell.test \
-spell2.test spell3.test spelling.test stamph.test stdlib.test \
-subdir.test subdir2.test subst.test symlink.test syntax.test tags.test \
-tagsub.test target.test texinfo.test texinfo2.test texinfo3.test \
-texinfo4.test texinfo5.test texinfo6.test texinfo7.test unused.test \
-version.test version2.test version3.test vpath.test vtexi.test \
-vtexi2.test whoami.test xsource.test yacc.test yaccpp.test
+conf2.test confdist.test confh.test confh2.test config.test \
+confincl.test confsub.test confvar.test confvar2.test cxxcpp.test \
+cxxlibobj.test cxxlink.test cxxnoc.test cxxo.test cygwin32.test	\
+defun.test defun2.test dejagnu.test depacl.test depacl2.test \
+depend.test depend2.test depend3.test discover.test distdir.test \
+dup.test dup2.test else.test empty.test error.test exdir.test \
+exdir2.test exsource.test extra.test extra3.test extra4.test \
+flibs.test fnoc.test fo.test fonly.test fpinst2.test fpinstall.test \
+gnits.test implicit.test include.test info.test insh.test insh2.test \
+install.test installsh.test instdata.test instexec.test insthook.test \
+instman.test interp.test interp2.test java.test javaprim.test \
+javasubst.test ldadd.test lex.test lex2.test libobj.test libobj2.test \
+libobj3.test libobj4.test libobj5.test libobj6.test libobj7.test \
+libobj8.test library.test link_c_cxx.test link_f_c.test	\
+link_f_c_cxx.test link_f_cxx.test link_f_only.test lisp.test \
+mdate.test mdate2.test mdate3.test mkinst2.test mkinstall.test \
+noinst.test number.test objc.test obsolete.test order.test outdir.test \
+output.test output2.test output3.test output4.test output5.test	\
+package.test parse.test pluseq.test pluseq2.test pluseq3.test \
+pluseq4.test pluseq5.test prefix.test primary.test primary2.test \
+proginst.test ranlib.test recurs.test recurs2.test remake.test \
+remake2.test req.test rulepat.test scripts.test seenc.test \
+sinclude.test spell.test spell2.test spell3.test spelling.test \
+stamph.test stdlib.test subdir.test subdir2.test subst.test \
+symlink.test syntax.test tags.test tagsub.test target.test \
+texinfo.test texinfo2.test texinfo3.test texinfo4.test texinfo5.test \
+texinfo6.test texinfo7.test unused.test version.test version2.test \
+version3.test vpath.test vtexi.test vtexi2.test whoami.test \
+xsource.test yacc.test yaccpp.test
 
 EXTRA_DIST = defs $(TESTS)
 
