@@ -1,5 +1,8 @@
 1999-01-14  Tom Tromey  <tromey@cygnus.com>
 
+	* confh2.test: New file.
+	* Makefile.am (TESTS): Added confh2.test.
+
 	* confh.test: Run automake differently the second time.
 
 	* mdate3.test: New file.
